[gd_scene load_steps=6 format=3 uid="uid://7hbuh8vjpqfo"]

[ext_resource type="Script" uid="uid://vsegvb0jvrf4" path="res://Scripts/torre.gd" id="1_mgsi1"]
[ext_resource type="Texture2D" uid="uid://dq0l8ba4ljdmc" path="res://Tower Defense (top-down)/PNG/Default size/towerDefense_tile249.png" id="2_j3rtk"]
[ext_resource type="PackedScene" uid="uid://chnuq1ym12uv1" path="res://Cenas/projetil.tscn" id="2_wrlih"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wrlih"]
size = Vector2(42, 55)

[sub_resource type="CircleShape2D" id="CircleShape2D_j3rtk"]
radius = 392.957

[node name="Torre" type="CharacterBody2D"]
scale = Vector2(0.65456, 0.623152)
collision_layer = 0
collision_mask = 0
script = ExtResource("1_mgsi1")
projetil_scena = ExtResource("2_wrlih")

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(19, 1.19209e-07)
rotation = -1.57668

[node name="Sprite2D" type="Sprite2D" parent="."]
rotation = 1.5708
texture = ExtResource("2_j3rtk")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = -0.000196815
shape = SubResource("RectangleShape2D_wrlih")

[node name="alcance" type="Area2D" parent="."]
position = Vector2(-1, 1)
scale = Vector2(1.1, 1.418)
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="alcance"]
position = Vector2(-1.35644, 0)
scale = Vector2(1, 0.392)
shape = SubResource("CircleShape2D_j3rtk")
one_way_collision_margin = 0.0

[node name="Timer" type="Timer" parent="alcance"]
autostart = true

[connection signal="body_entered" from="alcance" to="." method="_on_alcance_body_entered"]
[connection signal="body_exited" from="alcance" to="." method="_on_alcance_body_exited"]
[connection signal="timeout" from="alcance/Timer" to="." method="_on_timer_timeout"]
